@@ -23,7 +23,7 @@
 // LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 // OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 // THE SOFTWARE.
-using System;
+#if DEBUG
 using NUnit.Framework;
 
 namespace Tests
@@ -40,4 +40,4 @@ namespace Tests
         }
     }
 }
-
+#endif
