@@ -2,6 +2,16 @@
 
 	* Claunia.IO.csproj:
 	* Tests/Interop.Apple.cs:
+	* Interop/Apple/Interop.Apple.uname.cs:
+	  Added code for uname() in OS X
+
+	* Tests/Interop.DetectOS.cs:
+	  Only compile tests in DEBUG
+
+2015-02-12  Natalia Portillo  <claunia@claunia.com>
+
+	* Claunia.IO.csproj:
+	* Tests/Interop.Apple.cs:
 	* Tests/Interop.DetectOS.cs:
 	* Interop/Interop.DetectOS.cs:
 	* Interop/Interop.PlatformID.cs:
